Update binning variables to align with data

--- a/Blast_Fert_Predict_Model.ipynb
+++ b/Blast_Fert_Predict_Model.ipynb
@@ -102,18 +102,18 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "##In the below we define the edges for the classification and make them equa; width \n",
+    "##In the below we define the edges for the classification and make them equal widths\n",
     "# the below can change based on domain knowledge \n",
-    "fert_bin = [0,33,66,100]\n",
-    "blast_bin = [0,33,66,100]\n",
+    "fert_bin = [40,50,76,100] # Low: 40-50% Medium: 50-70% High: 70-100%\n",
+    "blast_bin = [30,50,70,100]  # Low: 0-33% Medium: 33-66% High: 66-100%\n",
     "\n",
     "#Creating the labels for our classification problem \n",
     "fert_labels = ['Low','Meduim','High']\n",
     "blast_labels = ['Low', 'Meduim','High']\n",
     "\n",
     "# Binning the target variables\n",
-    "y_fert_binned = pd.cut(y[\"Fertilization Rate (%)\"] , bins=fert_bin , labels=fert_labels)\n",
-    "y_blast_binned = pd.cut(y[\"Blastulation_Rate (%)\"] , bins=blast_bin , labels=blast_labels)\n",
+    "y_fert_binned = pd.cut(y[\"Fertilization Rate (%)\"] , bins=fert_bin , labels=fert_labels, include_lowest=True)\n",
+    "y_blast_binned = pd.cut(y[\"Blastulation_Rate (%)\"] , bins=blast_bin , labels=blast_labels, include_lowest=True)\n",
     "\n",
     "# Convert to categorical codes for the neural network \n",
     "y_fert_codes = y_fert_binned.cat.codes\n",
@@ -176,6 +176,7 @@
     "print(\"x_test shape:\", x_test.shape)\n",
     "print(\"x_holdout shape:\", x_holdout.shape)\n",
     "\n",
+    "#Checking the distribution of data\n",
     "print(\"\\nFertilization - Train distribution:\", np.bincount(y_fert_train))\n",
     "print(\"Fertilization - Validation distribution:\", np.bincount(y_fert_val))\n",
     "print(\"Fertilization - Test distribution:\", np.bincount(y_fert_test))\n",
@@ -405,38 +406,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "9285e16a-f685-4df7-8367-74b60e2fd3e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch master\n",
-      "Your branch is up to date with 'origin/master'.\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add/rm <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   Blast_Fert_Predict_Model.ipynb\n",
-      "\tdeleted:    Predict_Fertalisation.ipynb\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\t.ipynb_checkpoints/\n",
-      "\tbest_blast_model.keras\n",
-      "\tbest_fert_model.keras\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n",
-      "* master\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git status\n",
-    "!git branch "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
